// Copyright (c) 2024 - 2025 Restate Software, Inc., Restate GmbH.
// All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

package restate.journal.events;

message TransientErrorEvent {
  enum CommandType {
    UNKNOWN = 0;
    INPUT = 1;
    OUTPUT = 2;
    GET_LAZY_STATE = 3;
    SET_STATE = 4;
    CLEAR_STATE = 5;
    CLEAR_ALL_STATE = 6;
    GET_LAZY_STATE_KEYS = 7;
    GET_EAGER_STATE = 8;
    GET_EAGER_STATE_KEYS = 9;
    GET_PROMISE = 10;
    PEEK_PROMISE = 11;
    COMPLETE_PROMISE = 12;
    SLEEP = 13;
    CALL = 14;
    ONE_WAY_CALL = 15;
    SEND_SIGNAL = 16;
    RUN = 17;
    ATTACH_INVOCATION = 18;
    GET_INVOCATION_OUTPUT = 19;
    COMPLETE_AWAKEABLE = 20;
  }

  uint32 error_code = 1;
  string error_message = 2;
  optional string error_stacktrace = 3;
  optional string restate_doc_error_code = 4;
  optional uint32 related_command_index = 5;
  optional string related_command_name = 6;
  optional CommandType related_command_type = 7;
}